# tableprinter

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: cmake-linux.yml  cmake-macos.yml  cmake-windows.yml  cmake.yml
benchmark/: CMakeLists.txt  printer-benchmark.cpp
cmake/: tableprinter-config.cmake.in
example/: CMakeLists.txt  print-colors.cpp  print-instructions-benchmark.cpp  print-scores.cpp  read-scores.cpp
src/tableprinter/: tableprinter.hpp
test/: CMakeLists.txt  printer-test.cpp
